# gpocl

./: CMakeLists.txt  README  TODO
datasets/: iris.csv  x4+x3+x2+x.csv
src/common/util/: CmdLineParser.h  Random.h  Util.h
src/gp/: CMakeLists.txt  CPU.cc  CPU.h  GP.cc  GP.h  GPU.cc  GPU.h  Params.cc  Params.h  Primitives.cc  Primitives.h  gpocl.cc
src/gp/CMakeModules/: FindOpenCL.cmake
src/gp/kernels/: common.cl  cpu.cl  gpu_fpi.cl  gpu_ppce.cl  gpu_ppcu.cl
